Fix bug where lyric scroll makes app jump offscreen, by setting overflow hidden in nav.

--- a/app/less/classes/nav.less
+++ b/app/less/classes/nav.less
@@ -50,6 +50,9 @@
 
     // TODO: Consider adjusting this animatable height for tablet and mini?
     height: @nav-height * 3; // Just an arbitrary value that's large enough.
+
+    // Prevent lyric scrolling from pushing app offscreen.
+    overflow: hidden;
 }
 
 .book-column-block, .book-column, .nav-book, .nav-toggle-book {
